EPBDS-385 Fix TableEditor.js initialization issues in IE

--- a/STUDIO/branches/iteration2_merge/org.openl.rules.tableeditor/css/menu.css
+++ b/STUDIO/branches/iteration2_merge/org.openl.rules.tableeditor/css/menu.css
@@ -5,7 +5,7 @@
     font-size: 110%;
 }
 
-.te_menu a {
+.te_menu a, .te_menu a:visited {
     text-decoration: underline;
     color: rgb(75,105,195);
 }
